--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,27 @@
 <% provide(:title, 'Sign up') %>
-<<<<<<< HEAD
 <h1>Inscrivez-vous</h1>
-=======
-<h1>Sign up</h1>
-<p> Merci de vous inscrire</p>
->>>>>>> sign-up
+
+<div class="row">
+  <div class="span6 offset3">
+    <%= form_for(@user) do |f| %>
+      <%= render 'shared/error_messages' %>
+      <form accept-charset="UTF-8" action="/users" class="new_user"
+      id="new_user" method="post">
+
+      <label for="user_name">Name</label>
+      <input id="user_name" name="user[name]" type="text" />
+
+      <label for="user_phone">Phone</label>
+      <input id="user_phone" name="user[phone]" type="text" />
+
+      <label for="user_password">Password</label>
+      <input id="user_password" name="user[password]" type="password" />
+
+      <label for="user_password_confirmation">Confirmation</label>
+      <input id="user_password_confirmation" name="user[password_confirmation]" type="password" />
+
+      <input class="btn btn-large btn-primary" name="commit" type="submit" value="Create my account" />
+    </form>
+    <% end %>
+  </div>
+</div>
