--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,11 @@
 <h1>BIENVENUE !</h1>
 
-<div class="center hero-unit">
+<div class="center hero-unit tucked-corners">
   <h2>
     Amicale des Beaudottes
   </h2>
 
   <%= link_to "Inscrivez-vous s'il vous plait !", signup_path, class: "btn btn-large" %>
 </div>
+
+<%= link_to "Picture", capture_path %>
