--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,3 +20,7 @@
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
+
+<div class="alert1 alert-info">
+  <%= link_to 'Ecrivez-nous !', new_contact_path %>
+</div>
